fix connect link alignment

--- a/css.css
+++ b/css.css
@@ -199,7 +199,6 @@ a:hover{
 #connect{
 	padding: 0;
     margin: 0 auto;
-    width: 500px;
 }
 #connect li{
 	display: inline;
